[gd_scene load_steps=9 format=2]

[ext_resource path="res://entity/building/trebuchet/trebuchet.gd" type="Script" id=1]
[ext_resource path="res://entity/building/trebuchet/trebuchet_turret/trebuchet_turret.tscn" type="PackedScene" id=2]
[ext_resource path="res://entity/building/trebuchet/static_body.obj" type="ArrayMesh" id=3]
[ext_resource path="res://assets/ui/bar-3d/hp_bar_3d.tscn" type="PackedScene" id=4]

[sub_resource type="SpatialMaterial" id=21]
flags_transparent = true
flags_unshaded = true
flags_no_depth_test = true
flags_do_not_receive_shadows = true
albedo_color = Color( 1, 1, 1, 0.647059 )

[sub_resource type="BoxShape" id=12]
extents = Vector3( 1.68065, 3.10908, 1.78517 )

[sub_resource type="CylinderShape" id=3]
height = 20.0
radius = 4.0

[sub_resource type="CylinderShape" id=22]
radius = 4.18118

[node name="trebuchet" type="KinematicBody"]
collision_layer = 0
input_ray_pickable = false
script = ExtResource( 1 )

[node name="trebuchet_turret" parent="." instance=ExtResource( 2 )]

[node name="MeshInstance2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
visible = false

[node name="barrack2" type="MeshInstance" parent="MeshInstance2"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
cast_shadow = 0
mesh = ExtResource( 3 )
skeleton = NodePath("../../trebuchet_turret")
software_skinning_transform_normals = false
material/0 = SubResource( 21 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.80574, 0 )
shape = SubResource( 12 )
disabled = true

[node name="Area" type="Area" parent="."]
collision_mask = 0
input_ray_pickable = false
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.696755, 0 )
shape = SubResource( 3 )

[node name="area_build" type="Area" parent="."]
collision_mask = 0
input_ray_pickable = false
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="area_build"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.45283, 0 )
shape = SubResource( 22 )

[node name="hpBar" parent="." instance=ExtResource( 4 )]
transform = Transform( 0.548561, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.24944, 0 )

[node name="Tween" type="Tween" parent="."]

[node name="agro_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="input_event" from="area_build" to="." method="_on_area_build_input_event"]
[connection signal="timeout" from="agro_timer" to="." method="_on_agro_timer_timeout"]
